# piaier

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  data.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  gpt.rs  lib.rs  main.rs  srv.rs
src-tauri/src/models/: ienum.rs  keyshut.rs  message.rs  mod.rs  mpstep.rs  prompter.rs  session.rs
src-tauri/tests/: test_db.rs  test_gpt.rs
src/components/: Message.vue
src/modules/promoter/: prompter.ts
src/router/: index.ts
src/views/ChatMain/: Index.vue
src/views/KeyShut/: Index.vue
src/views/PopWin/: Index.vue
src/views/Prompter/: Chat.vue  Icon.vue  Index.vue  MultiPrompt.vue  initial-elements.js
src/views/types/: aier.ts
